mobile white space fix

--- a/src/scss/core/_base.scss
+++ b/src/scss/core/_base.scss
@@ -19,4 +19,5 @@ code {
   font-size: $base-font-size;
   color: $white;
   padding: 0 1rem;
+  overflow: hidden;
 }
